fix intro and spacing on mobile

--- a/themes/hugo-serif-theme/assets/scss/components/_intro.scss
+++ b/themes/hugo-serif-theme/assets/scss/components/_intro.scss
@@ -45,9 +45,13 @@
   display: flex;
   justify-content: flex-start;
   overflow: hidden;
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(xs) {
     padding-top: 40px;
     padding-bottom: 20px;
+  }
+  @include media-breakpoint-up(md) {
+    padding-top: 50px;
+    padding-bottom: 30px;
   }
   h1 {
     color: $black;
